--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
     <div class="jumbotron">
     <h1 align="center">Registration Numbers</h1>
-        <p> Add in any Cape Town Car registration number and filter by town </p>
+        <p align="center"> Add in any Cape Town Car registration number and filter by town </p>
          </div>
     <form id="details" align="center">
 
